# myers

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Taskfile.yml  a.txt  file1.txt  file2.txt
.github/workflows/: build-linux.yml  build-macos-arm64.yml  build-macos.yml  build-windows.yml
docs/: README.md
manual/: book.toml
src/: common.rs  comparator.rs  lib.rs  main.rs  reports.rs
tests/: mod.rs  test_change.rs  test_delete.rs  test_equal.rs  test_insert.rs
tests/modifications/: change.rs  delete.rs  insert.rs  mod.rs
tests/test_operations/: change.rs  delete.rs  equal.rs  insert.rs
